--- a/animating_cards/index.html
+++ b/animating_cards/index.html
@@ -34,10 +34,17 @@
         </article>
         <article class="card">
             <header class="class-header">
-                <   p>June 25th 2020</p>
+                <p>June 25th 2020</p>
                 <h2>Card tricks are fun!!</h2>                
             </header>
         </article>
+        <article class="card">
+            <header class="class-header">
+                <p>June 25th 2020</p>
+                <h2>Card tricks are fun!!</h2>                
+            </header>
+        </article>
+        
     </section>
 </body>
 </html>
