--- a/animating_cards/index.html
+++ b/animating_cards/index.html
@@ -13,38 +13,115 @@
                 <p>June 25th 2020</p>
                 <h2>Card tricks are fun!!</h2>                
             </header>
+            <div class="card-author">
+                <a class="author-avatar" href="">
+                <img src="avatar.png">
+                </a>
+                <svg class="half-circle" viewBox="0 0 106 57">
+                    <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+                </svg>
+                <div class="author-name">
+                    <div class="author-name-prefix">Author</div>
+                    Phoebe Buffay
+                </div>
+            </div>
+
         </article>
         <article class="card">
             <header class="class-header">
                 <p>June 25th 2020</p>
                 <h2>Card tricks are fun!!</h2>                
             </header>
+            <div class="card-author">
+                <a class="author-avatar" href="">
+                <img src="avatar.png">
+                </a>
+                <svg class="half-circle" viewBox="0 0 106 57">
+                    <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+                </svg>
+                <div class="author-name">
+                    <div class="author-name-prefix">Author</div>
+                    Rachel Green
+                </div>
+            </div>
+
         </article>
         <article class="card">
             <header class="class-header">
                 <p>June 25th 2020</p>
                 <h2>Card tricks are fun!!</h2>                
             </header>
+            <div class="card-author">
+                <a class="author-avatar" href="">
+                <img src="avatar.png">
+                </a>
+                <svg class="half-circle" viewBox="0 0 106 57">
+                    <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+                </svg>
+                <div class="author-name">
+                    <div class="author-name-prefix">Author</div>
+                    Joey Tribbiani
+                </div>
+            </div>
+
         </article>
         <article class="card">
             <header class="class-header">
                 <p>June 25th 2020</p>
                 <h2>Card tricks are fun!!</h2>                
             </header>
+            <div class="card-author">
+                <a class="author-avatar" href="">
+                <img src="avatar.png">
+                </a>
+                <svg class="half-circle" viewBox="0 0 106 57">
+                    <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+                </svg>
+                <div class="author-name">
+                    <div class="author-name-prefix">Author</div>
+                    Ross Geller
+                </div>
+            </div>
+
         </article>
         <article class="card">
             <header class="class-header">
                 <p>June 25th 2020</p>
                 <h2>Card tricks are fun!!</h2>                
             </header>
+            <div class="card-author">
+                <a class="author-avatar" href="">
+                <img src="avatar.png">
+                </a>
+                <svg class="half-circle" viewBox="0 0 106 57">
+                    <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+                </svg>
+                <div class="author-name">
+                    <div class="author-name-prefix">Author</div>
+                    Chandler Bing
+                </div>
+            </div>
+
         </article>
         <article class="card">
             <header class="class-header">
                 <p>June 25th 2020</p>
                 <h2>Card tricks are fun!!</h2>                
             </header>
+            <div class="card-author">
+                <a class="author-avatar" href="">
+                <img src="avatar.png">
+                </a>
+                <svg class="half-circle" viewBox="0 0 106 57">
+                    <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+                </svg>
+                <div class="author-name">
+                    <div class="author-name-prefix">Author</div>
+                    Monica Geller
+                </div>
+            </div>
+
         </article>
-        
     </section>
 </body>
 </html>
