--- a/animating_cards/parallax_depth/index.html
+++ b/animating_cards/parallax_depth/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <h1 class="title">Hover over the cards</h1>
+    <h1 class="title">Hover over the cards.</h1>
 
 <div id="app" class="container">
   <card data-image="https://images.unsplash.com/photo-1479660656269-197ebb83b540?dpr=2&auto=compress,format&fit=crop&w=1199&h=798&q=80&cs=tinysrgb&crop=">
