--- a/typing_carousal/index.html
+++ b/typing_carousal/index.html
@@ -15,7 +15,7 @@
            data-rotate='[ "nerdy.", "simple.", "pure JS.", "pretty.", "fun!" ]'></span>
       </h1>
       <h2>A single &lt;span&gt; is all you need.</h2>
-      <script src="index.js"></script>
+      <script src="main.js"></script>
 </body>
 
 </html>
