--- a/animating_cards/flip_cards/index.html
+++ b/animating_cards/flip_cards/index.html
@@ -11,7 +11,8 @@
 <body>
     <div class="card middle">
         <div class="front">
-          <img src="img.jpg" alt="">
+            <img src="https://images.unsplash.com/photo-1479659929431-4342107adfc1?dpr=2&auto=compress,format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop" alt="profile card">
+
         </div>
         <div class="back">
           <div class="back-content middle">
