--- a/sass/index.html
+++ b/sass/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link href="sass/style.css" type="text/css" rel="stylesheet"/>
+    <link href="scss/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
     <header>
